AM_CPPFLAGS = -I$(top_srcdir)/nDPI/src/include
LDADD = $(top_srcdir)/nDPI/src/lib/.libs/libndpi.a

bin_PROGRAMS = nfqfilter

nfqfilter_SOURCES = main.cpp nfqstatistictask.cpp nfqthread.cpp qdpi.cpp sender.cpp ahocorasick.cpp node.cpp AhoCorasickPlus.cpp sendertask.cpp packet.cpp pktanalyzer.cpp reloadtask.cpp

